--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "website",
   "license": "MIT",
   "devDependencies": {
+    "bower": "^1.8.0",
     "eslint": "^3.19.0",
     "eslint-config-crockford": "^1.0.0",
     "eslint-plugin-html": "^2.0.0",
-    "fs-extra": "^3.0.1"
+    "feed": "^1.1.0",
+    "fs-extra": "^3.0.1",
+    "marked": "^0.3.6"
   },
   "scripts": {
-    "start": "polymer serve",
-    "lint": "npm run lint:javascript",
-    "lint:javascript": "eslint . --ext js,html --ignore-path .gitignore",
-    "test": "polymer test",
-    "test:integration": "polymer build",
-    "build": "polymer build"
+    "postinstall": "bower install",
+    "start": "cd src && polymer serve",
+    "lint": "npm run lint:javascript && npm run lint:polymer",
+    "lint:javascript": "eslint src --ext js,html --ignore-path .gitignore",
+    "lint:polymer": "cd src && polymer lint",
+    "build": "cd src && polymer build"
   }
 }
