--- a/src/bower.json
+++ b/src/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "polymer-starter-kit",
+  "name": "website",
   "dependencies": {
     "app-layout": "PolymerElements/app-layout#2.0.0",
     "app-route": "PolymerElements/app-route#2.0.0",
@@ -12,9 +12,6 @@
     "polymer": "Polymer/polymer#2.0.0",
     "webcomponentsjs": "webcomponents/webcomponentsjs#1.0.1",
     "marked-element": "PolymerElements/marked-element#^2.1.0"
-  },
-  "devDependencies": {
-    "web-component-tester": "Polymer/web-component-tester#6.0.0"
   },
   "private": true
 }
