--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "lint": "npm run lint:javascript && npm run lint:polymer",
     "lint:javascript": "eslint src --ext js,html --ignore-path .gitignore",
     "lint:polymer": "cd src && polymer lint",
-    "build": "cd src && polymer build"
+    "build": "npm run build:data && npm run build:polymer",
+    "build:data": "node tools/create-data-index.js",
+    "build:polymer": "cd src && polymer build"
   }
 }
