--- a/src/.htaccess
+++ b/src/.htaccess
@@ -3,4 +3,8 @@ RewriteCond %{HTTPS} !=on
 RewriteCond %{ENV:HTTPS} !=on
 RewriteRule .* https://%{SERVER_NAME}%{REQUEST_URI} [R=301,L]
 
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule .* index.html [QSA,L]
+
 AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css application/javascript text/javascript application/json
