--- a/src/bower.json
+++ b/src/bower.json
@@ -8,10 +8,11 @@
     "iron-media-query": "PolymerElements/iron-media-query#2.0.0",
     "iron-pages": "PolymerElements/iron-pages#2.0.0",
     "iron-selector": "PolymerElements/iron-selector#2.0.0",
+    "marked-element": "PolymerElements/marked-element#^2.3.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#2.0.0",
+    "paper-progress": "PolymerElements/paper-progress#2.0.1",
     "polymer": "Polymer/polymer#2.0.2",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#1.0.8",
-    "marked-element": "PolymerElements/marked-element#^2.3.0"
+    "webcomponentsjs": "webcomponents/webcomponentsjs#1.0.8"
   },
   "private": true
 }
