--- a/src/.htaccess
+++ b/src/.htaccess
@@ -8,3 +8,17 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule .* index.html [QSA,L]
 
 AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css application/javascript text/javascript application/json
+
+Header set Content-Security-Policy "\
+    default-src 'self'; \
+    script-src 'self' 'unsafe-inline' data:; \
+    style-src 'unsafe-inline' fonts.googleapis.com; \
+    font-src fonts.gstatic.com; \
+    object-src 'none'; \
+    frame-ancestors 'none';"
+Header set Referrer-Policy no-referrer
+
+<Files index.html>
+	Header append Link <https://fonts.gstatic.com/s/pontanosans/v5/qFdD35GdgYR8EzR6oBLDHa3ayz8Ns1s.woff2>;rel="preload";as="font";crossorigin
+	Header append Link <https://fonts.gstatic.com/s/pontanosans/v5/qFdD35GdgYR8EzR6oBLDHa3axT8N.woff2>;rel="preload";as="font";crossorigin
+</Files>
