--- a/package.json
+++ b/package.json
@@ -2,20 +2,18 @@
   "name": "website",
   "license": "MIT",
   "devDependencies": {
-    "bower": "^1.8.2",
-    "eslint": "^4.15.0",
-    "eslint-config-crockford": "^2.0.0",
-    "eslint-plugin-html": "^4.0.1",
-    "feed": "^1.1.1",
-    "fs-extra": "^5.0.0",
-    "marked": "^0.3.12"
+    "bower": "1.8.4",
+    "eslint": "5.8.0",
+    "eslint-config-crockford": "2.0.0",
+    "eslint-plugin-html": "4.0.6",
+    "feed": "2.0.1",
+    "fs-extra": "7.0.0",
+    "marked": "0.5.1"
   },
   "scripts": {
     "postinstall": "bower install",
     "start": "cd src && polymer serve",
-    "lint": "yarn lint:javascript && yarn lint:polymer",
-    "lint:javascript": "eslint src --ext js,html --ignore-path .gitignore",
-    "lint:polymer": "cd src && polymer lint",
+    "lint": "eslint src --ext js,html --ignore-path .gitignore",
     "build": "yarn build:data && yarn build:polymer",
     "build:data": "node tools/create-data-index.js",
     "build:polymer": "cd src && polymer build"
