--- a/site/.htaccess
+++ b/site/.htaccess
@@ -22,3 +22,8 @@ Header set Referrer-Policy no-referrer
 	Header append Link <https://fonts.gstatic.com/s/pontanosans/v5/qFdD35GdgYR8EzR6oBLDHa3ayz8Ns1s.woff2>;rel="preload";as="font";crossorigin
 	Header append Link <https://fonts.gstatic.com/s/pontanosans/v5/qFdD35GdgYR8EzR6oBLDHa3axT8N.woff2>;rel="preload";as="font";crossorigin
 </Files>
+
+<Directory "/static">
+    ExpiresActive On
+	ExpiresDefault "access plus 1 year"
+</Directory>
