--- a/site/.htaccess
+++ b/site/.htaccess
@@ -1,18 +1,23 @@
+ErrorDocument 404 /404.html
+
 RewriteEngine on
 RewriteCond %{HTTPS} !=on
 RewriteCond %{ENV:HTTPS} !=on
 RewriteRule .* https://%{SERVER_NAME}%{REQUEST_URI} [R=301,L]
 
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule .* index.html [QSA,L]
+RewriteCond %{REQUEST_FILENAME}.html -f
+RewriteRule .* %{REQUEST_FILENAME}.html [QSA,L]
+RewriteCond %{REQUEST_URI} ^/posts/$
+RewriteRule .* posts.html [QSA,L]
+RewriteCond %{REQUEST_URI} ^/projects/$
+RewriteRule .* projects.html [QSA,L]
 
 AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css application/javascript text/javascript application/json
 
 Header set Content-Security-Policy "\
     default-src 'self'; \
-    script-src 'self' 'unsafe-inline' data:; \
-    style-src 'unsafe-inline' fonts.googleapis.com; \
+    script-src 'self'; \
+    style-src 'self' fonts.googleapis.com; \
     font-src fonts.gstatic.com; \
     object-src 'none'; \
     frame-ancestors 'none';"
@@ -22,8 +27,3 @@ Header set Referrer-Policy no-referrer
 	Header append Link <https://fonts.gstatic.com/s/pontanosans/v5/qFdD35GdgYR8EzR6oBLDHa3ayz8Ns1s.woff2>;rel="preload";as="font";crossorigin
 	Header append Link <https://fonts.gstatic.com/s/pontanosans/v5/qFdD35GdgYR8EzR6oBLDHa3axT8N.woff2>;rel="preload";as="font";crossorigin
 </Files>
-
-<Directory "/static">
-    ExpiresActive On
-	ExpiresDefault "access plus 1 year"
-</Directory>
