--- a/site/.htaccess
+++ b/site/.htaccess
@@ -17,7 +17,7 @@ AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css application
 Header set Content-Security-Policy "\
     default-src 'self'; \
     script-src 'self'; \
-    style-src 'self' fonts.googleapis.com; \
+    style-src 'self' 'unsafe-inline' fonts.googleapis.com; \
     font-src fonts.gstatic.com; \
     object-src 'none'; \
     frame-ancestors 'none';"
