--- a/.editorconfig
+++ b/.editorconfig
@@ -1,9 +1,7 @@
-# editorconfig.org
 root = true
 
 [*]
-indent_style = space
-indent_size = 4
+indent_style = tab
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
