--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@11ty/eleventy-plugin-rss": "^1.0.7",
     "@11ty/eleventy-plugin-syntaxhighlight": "^2.0.3",
     "clean-css": "^4.2.1",
-    "html-minifier": "^4.0.0"
+    "html-minifier": "^4.0.0",
+    "prettier": "^1.18.2"
   },
   "scripts": {
-    "build": "eleventy"
+    "build": "eleventy",
+		"format": "prettier --write \"**/*.{html,js,css,md}\""
   }
 }
