--- a/src/.htaccess
+++ b/src/.htaccess
@@ -1,4 +1,4 @@
-ErrorDocument 404 /404.html
+ErrorDocument 404 /404/index.html
 
 RewriteEngine on
 RewriteCond %{HTTPS} !=on
@@ -7,20 +7,16 @@ RewriteRule .* https://%{SERVER_NAME}%{REQUEST_URI} [R=301,L]
 
 RewriteCond %{REQUEST_FILENAME}.html -f
 RewriteRule .* %{REQUEST_FILENAME}.html [QSA,L]
-RewriteCond %{REQUEST_URI} ^/posts/$
-RewriteRule .* posts.html [QSA,L]
-RewriteCond %{REQUEST_URI} ^/projects/$
-RewriteRule .* projects.html [QSA,L]
 
 AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css application/javascript text/javascript application/json
 
 Header set Content-Security-Policy "\
-    default-src 'self'; \
-    script-src 'self'; \
-    style-src 'self' 'unsafe-inline' fonts.googleapis.com; \
-    font-src fonts.gstatic.com; \
-    object-src 'none'; \
-    frame-ancestors 'none';"
+ default-src 'self';\
+ script-src 'self';\
+ style-src 'self' 'unsafe-inline' fonts.googleapis.com;\
+ font-src fonts.gstatic.com;\
+ object-src 'none';\
+ frame-ancestors 'none';"
 Header set Referrer-Policy no-referrer
 
 <Files index.html>
