--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,3 +1,11 @@
 {
-	"useTabs": true
+	"useTabs": true,
+	"overrides": [
+		{
+			"files": ["*.html", "*.njk"],
+			"options": {
+				"parser": "angular"
+			}
+		}
+	]
 }
