--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@11ty/eleventy-plugin-syntaxhighlight": "^2.0.3",
     "clean-css": "^4.2.1",
     "html-minifier": "^4.0.0",
+    "markdown-it-anchor": "^5.2.4",
     "mkdirp": "^0.5.1",
     "node-fetch": "^2.6.0",
     "prettier": "^1.18.2"
