--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "markdown-it-anchor": "^5.2.4",
     "mkdirp": "^0.5.1",
     "node-fetch": "^2.6.0",
+    "posthtml": "^0.11.6",
     "prettier": "^1.18.2"
   },
   "scripts": {
