--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
     "@11ty/eleventy": "^0.9.0",
     "@11ty/eleventy-plugin-rss": "^1.0.7",
     "@11ty/eleventy-plugin-syntaxhighlight": "^2.0.3",
+    "chokidar": "^3.2.1",
     "clean-css": "^4.2.1",
+    "concurrently": "^4.1.2",
     "html-minifier": "^4.0.0",
     "markdown-it-anchor": "^5.2.4",
     "mkdirp": "^0.5.1",
     "node-fetch": "^2.6.0",
+    "p-limit": "^2.2.1",
     "posthtml": "^0.11.6",
     "prettier": "^1.18.2"
   },
   "scripts": {
-    "start": "eleventy --serve",
-    "build": "eleventy",
+    "start": "concurrently -n css,site \"node lib/build-css.js --watch\" \"eleventy --serve\"",
+    "build": "node lib/build-css.js && eleventy",
     "format": "prettier --write \"**/*.{html,js,css,md,njk}\""
   }
 }
