--- a/src/.htaccess
+++ b/src/.htaccess
@@ -11,12 +11,12 @@ RewriteRule .* %{REQUEST_FILENAME}.html [QSA,L]
 AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css application/javascript text/javascript application/json
 
 Header set Content-Security-Policy "\
- default-src 'self';\
+ default-src 'none';\
  script-src 'self';\
- style-src 'self' 'unsafe-inline' fonts.googleapis.com;\
+ style-src 'self' fonts.googleapis.com;\
  font-src fonts.gstatic.com;\
- object-src 'none';\
- frame-ancestors 'none';"
+ img-src 'self';\
+ base-uri 'none';"
 Header set Referrer-Policy no-referrer
 
 <Files index.html>
