--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "private": true,
   "license": "MIT",
   "devDependencies": {
-    "@11ty/eleventy": "^0.9.0",
-    "@11ty/eleventy-plugin-rss": "^1.0.7",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^2.0.3",
-    "chokidar": "^3.3.1",
-    "clean-css": "^4.2.1",
-    "concurrently": "^5.0.2",
-    "html-minifier": "^4.0.0",
-    "markdown-it-anchor": "^5.2.5",
-    "mkdirp": "^0.5.1",
-    "node-fetch": "^2.6.0",
-    "p-limit": "^2.2.1",
-    "posthtml": "^0.12.0",
-    "prettier": "^1.19.1"
+    "@11ty/eleventy": "0.9.0",
+    "@11ty/eleventy-plugin-rss": "1.0.7",
+    "@11ty/eleventy-plugin-syntaxhighlight": "3.0.1",
+    "chokidar": "3.3.1",
+    "clean-css": "4.2.1",
+    "concurrently": "5.0.2",
+    "html-minifier": "4.0.0",
+    "markdown-it-anchor": "5.2.5",
+    "mkdirp": "0.5.1",
+    "node-fetch": "2.6.0",
+    "p-limit": "2.2.2",
+    "posthtml": "0.12.0",
+    "prettier": "1.19.1"
   },
   "scripts": {
     "start": "concurrently -n css,site \"node lib/build-css.js --watch\" \"eleventy --serve\"",
