Add caching headers

--- a/deploy/docker/default.conf
+++ b/deploy/docker/default.conf
@@ -2,6 +2,10 @@ server {
 	listen      80;
 	server_name kuehle.me;
 
+	root       /usr/share/nginx/html;
+	index      index.html;
+	error_page 404 /404/;
+
 	server_tokens off;
 	gzip          on;
 	add_header    Content-Security-Policy "default-src 'none'; script-src 'self'; style-src 'self' fonts.googleapis.com; font-src fonts.gstatic.com; img-src 'self'; base-uri 'none'; frame-ancestors 'none';";
@@ -17,9 +21,10 @@ server {
 	#add_header Strict-Transport-Security "max-age=31536000; includeSubdomains; preload";
 
 	location / {
-		root  /usr/share/nginx/html;
-		index index.html;
+		add_header Cache-Control "no-cache";
 	}
 
-	error_page 404 /usr/share/nginx/html/404.html;
+	location /static/ {
+		add_header Cache-Control "max-age=31536000";
+	}
 }
