Add CORP, COEP and COOP headers

--- a/deploy/docker/default.conf
+++ b/deploy/docker/default.conf
@@ -9,6 +9,7 @@ server {
 	server_tokens off;
 	gzip          on;
 	add_header    Content-Security-Policy "default-src 'none'; script-src 'self'; style-src 'self' fonts.googleapis.com; font-src fonts.gstatic.com; img-src 'self'; base-uri 'none'; frame-ancestors 'none';";
+	add_header    Cross-Origin-Resource-Policy "same-origin";
 	add_header    Referrer-Policy "no-referrer";
 	add_header    X-Content-Type-Options "nosniff";
 	add_header    X-XSS-Protection "1; mode=block";
@@ -22,6 +23,11 @@ server {
 
 	location / {
 		add_header Cache-Control "no-cache";
+
+		location ~* \.html$ {
+			add_header Cross-Origin-Embedder-Policy "require-corp";
+			add_header Cross-Origin-Opener-Policy "same-origin";
+		}
 	}
 
 	location /static/ {
