--- a/deploy/docker/default.conf
+++ b/deploy/docker/default.conf
@@ -8,11 +8,7 @@ server {
 
 	server_tokens off;
 	gzip          on;
-	add_header    Content-Security-Policy "default-src 'none'; script-src 'self'; style-src 'self' fonts.googleapis.com; font-src fonts.gstatic.com; img-src 'self'; base-uri 'none'; frame-ancestors 'none';";
-	add_header    Cross-Origin-Resource-Policy "same-origin";
-	add_header    Referrer-Policy "no-referrer";
-	add_header    X-Content-Type-Options "nosniff";
-	add_header    X-XSS-Protection "1; mode=block";
+	include       /etc/nginx/snippets/common-headers.conf;
 
 	if ($http_x_forwarded_proto = "http") {
 		return 301 https://$server_name$request_uri;
@@ -22,15 +18,19 @@ server {
 	#add_header Strict-Transport-Security "max-age=31536000; includeSubdomains; preload";
 
 	location / {
+		include /etc/nginx/snippets/common-headers.conf;
 		add_header Cache-Control "no-cache";
 
 		location ~* \.html$ {
+			include /etc/nginx/snippets/common-headers.conf;
+			add_header Cache-Control "no-cache";
 			add_header Cross-Origin-Embedder-Policy "require-corp";
 			add_header Cross-Origin-Opener-Policy "same-origin";
 		}
 	}
 
 	location /static/ {
+		include /etc/nginx/snippets/common-headers.conf;
 		add_header Cache-Control "max-age=31536000";
 	}
 }
