--- a/deploy/docker/common-headers.conf
+++ b/deploy/docker/common-headers.conf
@@ -1,3 +1,4 @@
+add_header Strict-Transport-Security "max-age=31536000; includeSubdomains; preload";
 add_header Content-Security-Policy "default-src 'none'; script-src 'self'; style-src 'self' fonts.googleapis.com; font-src fonts.gstatic.com; img-src 'self'; base-uri 'none'; frame-ancestors 'none';";
 add_header Cross-Origin-Resource-Policy "same-origin";
 add_header Referrer-Policy "no-referrer";
