--- a/deploy/k8s/ingress.yml
+++ b/deploy/k8s/ingress.yml
@@ -1,19 +1,11 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: website
   annotations:
-    cert-manager.io/cluster-issuer: kubesail-letsencrypt
-    certmanager.k8s.io/cluster-issuer: kubesail-letsencrypt
+    kubernetes.io/ingress.global-static-ip-name: me-kuehle
+    networking.gke.io/managed-certificates: me-kuehle
 spec:
-  rules:
-    - host: kuehle.me
-      http:
-        paths:
-          - backend:
-              serviceName: website
-              servicePort: 80
-  tls:
-    - hosts:
-        - kuehle.me
-      secretName: kuehle-me
+  backend:
+    serviceName: website
+    servicePort: 80
