--- a/deploy/k8s/service.yml
+++ b/deploy/k8s/service.yml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: website
 spec:
-  type: ClusterIP
+  type: NodePort
   ports:
     - name: http
       protocol: TCP
