--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "prettier": "2.3.2"
   },
   "scripts": {
-    "start": "concurrently -n css,site \"node lib/build-css.js --watch\" \"eleventy --serve\"",
-    "build": "node lib/build-css.js && eleventy",
-    "format": "prettier --write \"**/*.{html,js,css,md,njk}\"",
-    "update-projects": "node lib/update-projects.js"
+    "start": "node lib/update-projects.js && concurrently -n css,site \"node lib/build-css.js --watch\" \"eleventy --serve\"",
+    "build": "NODE_ENV=production yarn _build_internal",
+    "_build_internal": "node lib/update-projects.js && node lib/build-css.js && eleventy",
+    "format": "prettier --write \"**/*.{html,js,css,md,njk}\""
   }
 }
