--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "start": "node lib/update-projects.mjs && concurrently -n css,site \"node lib/build-css.mjs --watch\" \"eleventy --serve\"",
-    "build": "NODE_ENV=production yarn _build_internal",
+    "build": "NODE_ENV=production npm run _build_internal",
     "_build_internal": "node lib/update-projects.mjs && node lib/build-css.mjs && eleventy",
     "format": "prettier --write \"**/*.{html,js,css,md,njk}\""
   }
