--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "license": "MIT",
   "devDependencies": {
-    "@11ty/eleventy": "2.0.1",
+    "@11ty/eleventy": "3.0.0-beta.1",
     "@11ty/eleventy-plugin-rss": "2.0.2",
     "@11ty/eleventy-plugin-syntaxhighlight": "5.0.0",
     "chokidar": "3.6.0",
