--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "concurrently": "9.0.1",
     "html-minifier": "4.0.0",
     "markdown-it-anchor": "9.2.0",
+    "nunjucks": "3.2.4",
     "p-limit": "6.1.0",
     "posthtml": "0.16.6",
     "prettier": "3.3.3"
